# DragonBonesCPP

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  README-zh_CN.md  README.md
AndroidCompose/: README-zh_CN.md  README.md
AndroidCompose/src/dragonBones/: CMakeLists.txt  build.gradle.kts
AndroidCompose/src/dragonBones/cpp/: JniBridge.cpp  JniBridge.h
AndroidCompose/src/dragonBones/cpp/opengl/: OpenGLFactory.cpp  OpenGLFactory.h  OpenGLSlot.cpp  OpenGLSlot.h
AndroidCompose/src/dragonBones/src/main/: AndroidManifest.xml
AndroidCompose/src/dragonBones/src/main/java/com/dragonbones/: DragonBonesController.kt  DragonBonesView.kt  JniBridge.kt
Cocos2DX_3.x/: README-zh_CN.md  README.md  Readme-zh_CN.md
DragonBones/src/: DragonBonesHeaders.h
SFML/: README-zh_CN.md  README.md
bindings/: dragonbones_bindings.cpp  dragonbones_bindings.hpp
bindings-generator/dragonbones/: dragonbones.ini  dragonbones.sh
bindings/api/: dragonbones_bindings_api.js
demos/: DemoBase.h  DemoDragonBoy.h  README.md
demos/Classes/: AppDelegate.cpp  Demo.cpp  Demo.h
demos/cocos2d-x-3.2/: CMakeLists.txt  README.md
demos/cocos2d-x-3.3/: CMakeLists.txt  FindGLEW.cmake  README.md
demos/cocos2d-x-3.x/: .gitignore  DemoBase.h  DemoDragonBoy.h  DemoKnight.h  README.md
demos/fla/: trimTest.fla
dragonbones/: .env-ndk-build  Android.mk  AnimationEvent.h  AnimationState.cpp  AnimationState.h  Armature.cpp  ArmatureData.h  BaseFactory.h  Bone.h  DBDataUtil.cpp  DBDataUtil.h  DBObject.h  DBTransform.h  DragonBones.h  DragonBonesHeaders.h  IAnimatable.h  SkeletonData.h  Slot.cpp  Slot.h  TextureAtlasData.h  Timeline.h  TimelineState.cpp  TransformFrame.h  TransformTimeline.h  XMLDataParser.cpp  preDB.h
dragonbones/animation/: Animation.cpp  Animation.h  AnimationState.cpp  AnimationState.h  IAnimatable.h  TimelineState.cpp  TimelineState.h  WorldClock.cpp  WorldClock.h
dragonbones/core/: Armature.cpp  Armature.h  Bone.cpp  Bone.h  DBObject.cpp  Object.cpp  Object.h  Slot.cpp  Slot.h
dragonbones/events/: EventData.cpp  EventData.h  IEventDispatcher.h
dragonbones/factories/: BaseFactory.cpp  BaseFactory.h
dragonbones/geoms/: ColorTransform.h  Matrix.h  Point.h  Rectangle.h  Transform.h
dragonbones/objects/: AnimationData.h  ArmatureData.h  BoneData.h  DisplayData.h  DragonBonesData.h  EllipseData.h  Frame.h  IAreaData.h  RectangleData.h  SkeletonData.h  SkinData.h  SlotData.h  (+6 more)
dragonbones/renderer/cocos2d-x-3.x/demo/: CMakeLists.txt
engines/: .gitignore  README.md
issue-flipping/: robot.dbproj
travis-scripts/: before-install.sh  run-script.sh
(+531 files in other folders)
